--- a/configurations/.config/i3/config
+++ b/configurations/.config/i3/config
@@ -1,8 +1,8 @@
 # Victor's i3 configuration
 # Victor O Alvarez - victoroalvarez@protonmail.com
+# 2021
 # NOTES:
 # * All CAPS denote a section of the document
-# * Double spaces separate each section code from the other
 # Color Scheme:
         # https://clrs.cc/      # Example color pallete
         #NAVY   #001f3f
@@ -25,28 +25,38 @@
 ########
 # i3 CONFIG FILE
 # See https://i3wm.org/docs/userguide.html for a complete reference
+########
 
 ########
 # MODKEY 
 set $mod Mod4
+########
 
 ########
 # NO TITLE BARS
 for_window [class=".*"] border pixel 1
 # for_window [class=".*"] border pixel 0 # No borders
+########
 
 ########
 # FONTS
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
+########
 font pango:monospace 8
 
+########
+# GUI Control
+########
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
-# NetworkManager applet
-exec --no-startup-id nm-applet
+# Mouse+$mod used to drag around floating windows
+floating_modifier $mod
+
+# start a terminal
+bindsym $mod+Return exec xfce4-terminal #gnome-terminal #i3-sensible-terminal
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -54,12 +64,6 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
-
-# Mouse+$mod used to drag around floating windows
-floating_modifier $mod
-
-# start a terminal
-bindsym $mod+Return exec xfce4-terminal #gnome-terminal #i3-sensible-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -236,26 +240,19 @@ bar {
 	font pango:monospace 12px
 }
 
+########
 # COLORS
 # Focused window
 client.focused #0074D9 #0074D9 #FFFFFF ##0074D9 #0074D9
+########
 
-# Victor's Program execution
+########
+# Program execution
+########
 
 # Set background color black
 #exec xsetroot -solid "#000000"
 exec hsetroot -solid '#000000'
-# Execute dunst
-exec --no-startup-id dunst
-
-# Execute wicd tray for Network Management
-#exec --no-startup-id wicd-gtk --tray
-
-# Execute NetworkManager applet
-exec --no-startup-id nm-applet
-
-# Pasystray for PulseAudio
-exec --no-startup-id pasystray
 
 # Blueman Applet
 exec --no-startup-id blueman-applet
@@ -263,31 +260,48 @@ exec --no-startup-id blueman-applet
 # Compton
 #exec --no-startup-id compton --vsync opengl-swc --backend glx -f -G -I 0.09 -O 0.09 
 
-# Picom
-exec --no-startup-id picom -CGb -m 1.0
-# Set Background
-exec --no-startup-id feh --bg-scale /home/voa/Pictures/pexels-irina-iriser-1366957.jpg
-# XFCE4 Power Manager
-#exec --no-startup-id xfce4-power-manager
-
 # Launch conky
 #exec conky -b
 
+# Execute dunst
+exec --no-startup-id dunst
+
+# Set Background with feh
+exec --no-startup-id feh --bg-scale /home/voa/Pictures/pexels-irina-iriser-1366957.jpg
+
+# Execute NetworkManager applet
+exec --no-startup-id nm-applet
+
+# Pasystray for PulseAudio
+exec --no-startup-id pasystray
+
+# Picom
+exec --no-startup-id picom -CGb -m 1.0
+
+# Execute wicd tray for Network Management
+#exec --no-startup-id wicd-gtk --tray
+
+# XFCE4 Power Manager
+#exec --no-startup-id xfce4-power-manager
+
+
+########
 # Victor's Binds
-# Screen Management.
+########
 
 # Lock screen
 # Lock screen with i3lock
 bindsym $mod+Shift+w exec "i3lock & sleep 5 && xset dpms force off"
+
 # Lock screen with lightdm
 #bindsym $mod+Shift+w exec "dm-tool lock"
 
 # Set laptop screen 
-bindsym $mod+Shift+m exec "xrandr --output eDP1 --auto"
+bindsym $mod+Shift+m exec "xrandr --output eDP1 --auto && feh --bg-scale /home/voa/Pictures/pexels-irina-iriser-1366957.jpg"
 #bindsym $mod+m exec "xrandr --output eDP1 --off"
 
 # Run screen config script
-bindsym $mod+Shift+n exec /home/voa/.screenlayout/tcl1.sh
+bindsym $mod+Shift+n exec /home/voa/.screenlayout/tcl.sh
 
 # Use amixer to control audio
 ##bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -c 0 sset Master 5%+ && $refresh_i3status
