--- a/configurations/.config/i3/config
+++ b/configurations/.config/i3/config
@@ -28,11 +28,6 @@
 ########
 
 ########
-# MODKEY 
-set $mod Mod4
-########
-
-########
 # NO TITLE BARS
 for_window [class=".*"] border pixel 1
 # for_window [class=".*"] border pixel 0 # No borders
@@ -48,7 +43,11 @@ font pango:monospace 8
 ########
 # GUI Control
 ########
-# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
+
+# Mod Key
+set $mod Mod4
+
+#xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
