--- a/configurations/.config/i3/config
+++ b/configurations/.config/i3/config
@@ -22,40 +22,56 @@
         #GRAY   #AAAAAA
         #SILVER #DDDDDD
 
+
 ########
 # i3 CONFIG FILE
 # See https://i3wm.org/docs/userguide.html for a complete reference
 ########
 
-########
-# NO TITLE BARS
-for_window [class=".*"] border pixel 1
-# for_window [class=".*"] border pixel 0 # No borders
-########
 
 ########
-# FONTS
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
+# APPEARANCE: FONTS, COLORS and  BORDER
 ########
+
+# Focused window Colors 
+client.focused #0074D9 #0074D9 #FFFFFF ##0074D9 #0074D9
+
+# Font for window titles. Will also be used by the bar unless a different font is used in the bar {} block below.
 font pango:monospace 8
 
+# Window Border
+# 1 pixel border
+for_window [class=".*"] border pixel 1
+# for_window [class=".*"] border pixel 0
+
+
 ########
-# GUI Control
+# GUI CONTROL
 ########
 
 # Mod Key
 set $mod Mod4
 
+# start a terminal
+bindsym $mod+Return exec xfce4-terminal
+#gnome-terminal #i3-sensible-terminal
+
+# start dmenu (program launcher)
+# List all programs
+bindsym $mod+d exec --no-startup-id dmenu_run 
+# List GUI programs
+bindsym $mod+Shift+d exec --no-startup-id i3-dmenu-desktop
+
+
+
 #xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
+
 # Mouse+$mod used to drag around floating windows
 floating_modifier $mod
 
-# start a terminal
-bindsym $mod+Return exec xfce4-terminal #gnome-terminal #i3-sensible-terminal
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -64,14 +80,10 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
+
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (program launcher)
-# List all programs
-bindsym $mod+d exec --no-startup-id dmenu_run 
-# List GUI programs
-bindsym $mod+Shift+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
 bindsym $mod+j focus left
@@ -79,11 +91,13 @@ bindsym $mod+k focus down
 bindsym $mod+l focus up
 bindsym $mod+semicolon focus right
 
+
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
+
 
 # move focused window
 bindsym $mod+Shift+j move left
@@ -91,11 +105,13 @@ bindsym $mod+Shift+k move down
 bindsym $mod+Shift+l move up
 bindsym $mod+Shift+semicolon move right
 
+
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
+
 
 # split in horizontal orientation
 bindsym $mod+h split h
@@ -123,6 +139,7 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
+
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
 set $ws1 "1"
@@ -136,6 +153,7 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
+
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
@@ -147,6 +165,7 @@ bindsym $mod+7 workspace number $ws7
 bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
+
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1
@@ -160,6 +179,7 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
@@ -167,11 +187,12 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
+
 # Key combinations for Lock, Shutdown and Restart. Press mod+Pause
 # Lock
 set $Locker i3lock && sleep 1
 
-# Shutdown, Restart, Lock
+# Shutdown, Restart and Lock
 set $mode_system System (l) lock, (Shift+e) logout, (s) suspend, (h) hibernate, (Shift+r) reboot, (Shift+s) shutdown
 mode "$mode_system" {
     bindsym l exec --no-startup-id $Locker, mode "default"
@@ -186,6 +207,7 @@ mode "$mode_system" {
     bindsym Escape mode "default"
 }
 
+# Keyboard bind for Shutdown, Restart and Lock
 bindsym $mod+Pause mode "$mode_system"
 
 
@@ -216,6 +238,8 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+
+# i3bar
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
@@ -239,14 +263,10 @@ bar {
 	font pango:monospace 12px
 }
 
-########
-# COLORS
-# Focused window
-client.focused #0074D9 #0074D9 #FFFFFF ##0074D9 #0074D9
-########
 
 ########
-# Program execution
+# STARTUP PROGRAMS
+# Execute programs at startup
 ########
 
 # Set background color black
@@ -285,7 +305,8 @@ exec --no-startup-id picom -CGb -m 1.0
 
 
 ########
-# Victor's Binds
+# PROGRAMS KEYBINDS
+# Run programs and scripts by keypress
 ########
 
 # Lock screen
@@ -301,44 +322,6 @@ bindsym $mod+Shift+m exec "xrandr --output eDP1 --auto && feh --bg-scale /home/v
 
 # Run screen config script
 bindsym $mod+Shift+n exec /home/voa/.screenlayout/tcl.sh
-
-# Use amixer to control audio
-##bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -c 0 sset Master 5%+ && $refresh_i3status
-##bindsym XF86AudioLowerVolume exec --no-startup-id amixer -c 0 sset Master 5%- && $refresh_i3status
-#bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-#bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
-
-# CONTROL Sound VOLUME
-
-# Increase volume
-#bindsym $mod+Shift+plus exec pactl set-sink-volume @DEFAULT_SINK@ +10%
-#bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +10%
-
-# Set volume to 100%
-#bindsym $mod+XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ 100%
-
-# Decrease volume
-#bindsym $mod+Shift+minus exec pactl set-sink-volume @DEFAULT_SINK@ -10%
-#bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -10%
-
-# toggle mute
-#bindsym $mod+Shift+BackSpace exec pactl set-sink-mute @DEFAULT_SINK@ toggle
-#bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
-
-# CONTROL BRIGHTNESS
-# Increase brightness
-bindsym XF86MonBrightnessUp exec xbacklight -inc 5
-#bindsym $mod+Shift+plus exec xbacklight -inc 5
-
-# Decrease brightness
-bindsym XF86MonBrightnessDown exec xbacklight -dec 5
-#bindsym $mod+Shift+minus exec xbacklight -dec 5
-
-########
-# Launch Programs
-
-# Launch thunar
-#bindsym $mod+p exec thunar
 
 # Launch Midnight Commander
 #bindsym $mod+Shift+p exec xfce4-terminal -e mc 
@@ -373,3 +356,33 @@ bindsym $mod+Shift+b exec google-chrome
 # Launch Android Studio
 #bindsym $mod+Shift+s exec /opt/android-studio/bin/studio.sh
 
+# Use amixer to control audio
+##bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -c 0 sset Master 5%+ && $refresh_i3status
+##bindsym XF86AudioLowerVolume exec --no-startup-id amixer -c 0 sset Master 5%- && $refresh_i3status
+#bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+#bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+
+# CONTROL Sound VOLUME
+# Increase volume
+#bindsym $mod+Shift+plus exec pactl set-sink-volume @DEFAULT_SINK@ +10%
+#bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +10%
+
+# Set volume to 100%
+#bindsym $mod+XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ 100%
+
+# Decrease volume
+#bindsym $mod+Shift+minus exec pactl set-sink-volume @DEFAULT_SINK@ -10%
+#bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -10%
+
+# toggle mute
+#bindsym $mod+Shift+BackSpace exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+#bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+
+# CONTROL BRIGHTNESS
+# Increase brightness
+bindsym XF86MonBrightnessUp exec xbacklight -inc 5
+#bindsym $mod+Shift+plus exec xbacklight -inc 5
+
+# Decrease brightness
+bindsym XF86MonBrightnessDown exec xbacklight -dec 5
+#bindsym $mod+Shift+minus exec xbacklight -dec 5
