--- a/configurations/.config/picom/picom.conf
+++ b/configurations/.config/picom/picom.conf
@@ -121,13 +121,14 @@ fade-out-step = 0.5;
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
 inactive-opacity = 1; # inactive
+#inactive-opacity = 0.5;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
 #frame-opacity = 0.7;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
-menu-opacity = 0.0
+menu-opacity = 0.0;
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
 # inactive-opacity-override = true
