--- a/configurations/.config/i3/config
+++ b/configurations/.config/i3/config
@@ -60,9 +60,9 @@ bindsym $mod+Return exec xfce4-terminal
 bindsym $mod+Shift+Return exec terminator
 
 # start file manager
-bindsym $mod+backslash exec nautilus
+bindsym $mod+backslash exec nautilus -w
 bindsym $mod+Shift+backslash exec pcmanfm
-bindsym $mod+z exec nautilus
+bindsym $mod+z exec nautilus -w
 bindsym $mod+Shift+z exec pcmanfm
 
 # run dmenu (program launcher)
@@ -275,9 +275,9 @@ bar {
 # Execute programs at startup
 ################
 
-# Set background color black
+# Set background color gray
 #exec xsetroot -solid "#000000"
-exec hsetroot -solid '#000000'
+exec hsetroot -solid '#4A5459'
 
 # Blueman Applet
 exec --no-startup-id blueman-applet
