--- a/configurations/.config/i3/config
+++ b/configurations/.config/i3/config
@@ -32,11 +32,12 @@
 # APPEARANCE: FONTS, COLORS and  BORDER
 ################
 
-# focused window Colors 
-client.focused #0074D9 #0074D9 #FFFFFF ##0074D9 #0074D9
+# focused window Colors
+# #0074D9 #0074D9 
+client.focused #0074D9 #0074D9 #FFFFFF 
 
 # font for window titles. Will also be used by the bar unless a different font is used in the bar {} block below.
-font pango:monospace 10
+font pango:monospace 8
 
 # window Border
 # 1 pixel border
@@ -52,7 +53,7 @@ for_window [class=".*"] border pixel 2
 # GUI CONTROL
 ################
 
-# mod Key
+# mod Key. Uses Windows Key
 set $mod Mod4
 
 # change gaps in realtime. Increase or decrease gaps
@@ -283,6 +284,7 @@ bar {
 # STARTUP PROGRAMS
 # Execute programs at startup
 ################
+# Commented lines are not used.
 
 # set background color gray
 #exec xsetroot -solid "#000000"
@@ -331,7 +333,7 @@ exec --no-startup-id picom -CGb -m 1.0
 
 
 ################
-# KEYBINDS FOR PROGRAMS
+# KEYBINDS
 # Run programs and scripts by keypress
 ################
 
@@ -343,11 +345,13 @@ bindsym XF86MonBrightnessUp exec xbacklight -inc 5
 # Decrease brightness
 bindsym XF86MonBrightnessDown exec xbacklight -dec 5
 #bindsym $mod+Shift+minus exec xbacklight -dec 5
+
 # LOCK SCREEN
 # lock screen with i3lock
 bindsym $mod+Shift+w exec "i3lock && sleep 5 && xset dpms force off"
 # lock screen with lightdm
 #bindsym $mod+Shift+w exec "dm-tool lock"
+
 # MONITOR
 # set default monitor. 
 bindsym $mod+Shift+m exec "xrandr --output eDP1 --auto 
@@ -355,6 +359,7 @@ bindsym $mod+Shift+m exec "xrandr --output eDP1 --auto
 #bindsym $mod+m exec "xrandr --output eDP1 --off"
 # run config script for monitor
 bindsym $mod+Shift+n exec /home/voa/.screenlayout/tcl.sh
+
 # screen shots
 bindsym $mod+Print exec gnome-screenshot
 bindsym Ctrl+Print exec gnome-screenshot -w
@@ -386,7 +391,6 @@ bindsym $mod+Shift+s exec syncthing --browser-only
 
 
 # OLD CONFIGS
-
 # launch WICD without a tray for Network Management
 #bindsym $mod+c exec wicd-gtk --no-tray
 
