--- a/configurations/.config/terminator/config
+++ b/configurations/.config/terminator/config
@@ -6,6 +6,7 @@
     font = Source Code Pro 12
     show_titlebar = False
     scrollbar_position = hidden
+    scroll_on_output = True
     palette = "#000000:#cd0000:#00cd00:#cdcd00:#0000cd:#cd00cd:#00cdcd:#faebd7:#404040:#ff0000:#00ff00:#ffff00:#0000ff:#ff00ff:#00ffff:#ffffff"
     use_system_font = False
 [layouts]
