Change README, Conky config file, and Terminator config file.

--- a/configurations/.config/terminator/config
+++ b/configurations/.config/terminator/config
@@ -2,8 +2,10 @@
 [keybindings]
 [profiles]
   [[default]]
+    background_darkness = 0.85
     cursor_color = "#aaaaaa"
     font = Source Code Pro 12
+    foreground_color = "#ffffff"
     show_titlebar = False
     scrollbar_position = hidden
     scroll_on_output = True
