--- a/configurations/.config/conky/conky.conf
+++ b/configurations/.config/conky/conky.conf
@@ -60,28 +60,26 @@ conky.text = [[
 # ${color grey}Info:$color ${scroll 32 $sysname $nodename $kernel $machine}
 ${color grey}Uptime:$color $uptime
 ${color grey}Frequency (in MHz):$color $freq
-${color grey}Frequency (in GHz):$color $freq_g
-${color grey}RAM Usage:$color $mem/$memmax - $memperc% ${membar 4}
-${color grey}Swap Usage:$color $swap/$swapmax - $swapperc% ${swapbar 4}
-${color grey}CPU Usage:$color $cpu% ${cpubar 4}
+${color grey}RAM:$color $mem/$memmax $memperc% 
+${color grey}Swap:$color $swap/$swapmax $swapperc%
+${color grey}CPU:$color $cpu%
 ${color grey}Processes:$color $processes  ${color grey}Running:$color $running_processes
 ${color grey}Battery:$color ${battery BAT0} 
 # ${battery_bar 4, BAT0}
 $hr
 # Wireless Information
 ${color grey}Access Point: $color   ${wireless_essid wlp2s0}
-${color grey}Signal Strength: $color ${wireless_link_bar 4 wlp2s0}
 ${color grey}Signal Quality: $color ${wireless_link_qual_perc wlp2s0}%
 ${color grey}Wireless Mode: $color  ${wireless_mode wlp2s0}
 $hr
 ${color grey}File systems:
- / $color${fs_used /}/${fs_size /} ${fs_bar 6 /}
+ / $color${fs_used /}/${fs_size /} ${fs_bar 4 /}
 ${color grey}Networking:
 Up:$color ${upspeed} ${color grey} - Down:$color ${downspeed}
 $hr
-${color grey}Name              PID     CPU%   MEM%
-${color lightgrey} ${top name 1} ${top pid 1} ${top cpu 1} ${top mem 1}
-${color lightgrey} ${top name 2} ${top pid 2} ${top cpu 2} ${top mem 2}
-${color lightgrey} ${top name 3} ${top pid 3} ${top cpu 3} ${top mem 3}
-${color lightgrey} ${top name 4} ${top pid 4} ${top cpu 4} ${top mem 4}
+#${color grey}Name              PID     CPU%   MEM%
+#${color lightgrey} ${top name 1} ${top pid 1} ${top cpu 1} ${top mem 1}
+#${color lightgrey} ${top name 2} ${top pid 2} ${top cpu 2} ${top mem 2}
+#${color lightgrey} ${top name 3} ${top pid 3} ${top cpu 3} ${top mem 3}
+#${color lightgrey} ${top name 4} ${top pid 4} ${top cpu 4} ${top mem 4}
 ]]
