--- a/configurations/.config/i3status/config
+++ b/configurations/.config/i3status/config
@@ -36,11 +36,11 @@ general {
 }
 
 #order += "ipv6"
-order += "disk /"
+#order += "disk /"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "battery all"
-order += "load"
+#order += "load"
 order += "tztime local"
 
 wireless _first_ {
