Change Conky config file.

--- a/configurations/.config/conky/conky.conf
+++ b/configurations/.config/conky/conky.conf
@@ -59,7 +59,7 @@ conky.text = [[
 # System Information
 # ${color grey}Info:$color ${scroll 32 $sysname $nodename $kernel $machine}
 ${color grey}Uptime:$color $uptime
-${color grey}Frequency (in MHz):$color $freq
+${color grey}Frequency (MHz):$color $freq
 ${color grey}RAM:$color $mem/$memmax $memperc% 
 ${color grey}Swap:$color $swap/$swapmax $swapperc%
 ${color grey}CPU:$color $cpu%
