--- a/configurations/.config/i3/config
+++ b/configurations/.config/i3/config
@@ -265,7 +265,7 @@ bindsym $mod+r mode "resize"
 # start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        position top
+        position bottom
         status_command i3status
         colors {
 		statusline	#FFFFFF
@@ -369,6 +369,10 @@ bindsym $mod+Shift+m exec "xrandr --output eDP1 --auto
 #bindsym $mod+m exec "xrandr --output eDP1 --off"
 # run config script for monitor
 bindsym $mod+Shift+n exec /home/voa/.screenlayout/tcl.sh
+
+# launch xampp
+#bindsym $mod+Shift+a exec /opt/lampp/lampp start
+
 
 # screen shots
 bindsym $mod+Print exec gnome-screenshot
