--- a/configurations/.config/conky/conky.conf
+++ b/configurations/.config/conky/conky.conf
@@ -63,7 +63,7 @@ ${color grey}Frequency (MHz):$color $freq
 ${color grey}RAM:$color  $mem/$memmax $memperc% 
 ${color grey}Swap:$color $swap/$swapmax $swapperc%
 ${color grey}CPU:$color  $cpu%
-${color grey}Processes:$color $processes  ${color grey}Running:$color $running_processes   
+${color grey}Processes:$color $processes  ${color black}Running:$color $running_processes   
 ${color grey}Battery:$color   ${battery BAT0} 
 # ${battery_bar 4, BAT0}
 $hr
