--- a/configurations/.config/conky/conky.conf
+++ b/configurations/.config/conky/conky.conf
@@ -63,7 +63,7 @@ ${color grey}Frequency (MHz):$color $freq
 ${color grey}RAM:$color  $mem/$memmax $memperc% 
 ${color grey}Swap:$color $swap/$swapmax $swapperc%
 ${color grey}CPU:$color  $cpu%
-${color grey}Processes:$color $processes  ${color black}Running:$color $running_processes   
+${color grey}Processes:$color $processes  ${color grey}Running:$color $running_processes   
 ${color grey}Battery:$color   ${battery BAT0} 
 # ${battery_bar 4, BAT0}
 $hr
@@ -76,7 +76,7 @@ ${color grey}File systems:
  / $color${fs_used /}/${fs_size /} ${fs_bar 4 /}
 ${color grey}Networking:
 Up:$color ${upspeed} ${color grey} - Down:$color ${downspeed}
-$hr
+#$hr
 #${color grey}Name              PID     CPU%   MEM%
 #${color lightgrey} ${top name 1} ${top pid 1} ${top cpu 1} ${top mem 1}
 #${color lightgrey} ${top name 2} ${top pid 2} ${top cpu 2} ${top mem 2}
